--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,8 @@ flutter:
   assets:
     - assets/pages/login-and-signup/login-signup-bg.jpg
     - assets/icons/icon-only.png
+    - assets/icons/map-icon.png
+    - assets/mapStyles/default_style.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
