--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/launcher/icon.png"
+  image_path: "assets/launcher/app-icon.png"
 
 flutter_native_splash:
   color: "#ffffff"
